# tauri-reader

./: README.md  pyproject.toml
src/tauri_reader/: __init__.py  __main__.py
