[project]
name = "tauri-reader"
version = "0.1.3"
description = "tauri static asset extraction gadget"
authors = [
    {name = "hacbit", email = "hacbit@foxmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
tauri-reader = "tauri_reader:main"