[project]
name = "tauri-reader"
version = "0.1.4"
description = "tauri static asset extraction gadget"
authors = [
    {name = "hacbit", email = "hacbit@foxmail.com"},
]
dependencies = [
    "brotli>=1.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
tauri-reader = "tauri_reader:main"

[project.scripts]
tauri-reader = "tauri_reader.__main__:main"